fixed flex alignment for devices

--- a/src/scss/device.scss
+++ b/src/scss/device.scss
@@ -65,7 +65,8 @@
     margin-top: 15px;
     height: 50px;
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
+    justify-content: flex-end;
 
     .form-control{
       margin: 0;
